# cryptobot_clone

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
configs/: limits.config  markets.config  orders.config  stream.config
research_data/: no_fee_markets.txt  pairs_BTC.txt  pairs_BTC_Binance.txt  pairs_BTC_OKX.txt  pairs_USDT_Binance.txt  pairs_USDT_OKX.txt  pairs_usdt_BUSDUSDT.txt  triangles_BTC.txt  triangles_BTC_Binance.txt  triangles_BTC_OKX.txt  triangles_USDT_Binance.txt  triangles_USDT_OKX.txt  triangles_usdt_BUSDUSDT.txt
scripts/: 4h_log.txt  OKX_info.json  OKX_test.py  cut_triangles.py  get_cur_amount.py  get_need_count.py  get_trade_fee.py  install_libs.sh  make_startup_files.py  output.txt  repeat_deleter.py  run_compile.sh  save_log_file.sh  startup_script.py  test.py
scripts/Analisis/: analisis_with_trades.txt  analizer.py  good_log_12h_with_trades.txt
src/: main.cpp
src/binance/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  doOrdersClass.cpp  doOrdersClass.hpp  triangle.cpp  triangle.hpp
src/bot/: CMakeLists.txt  cryptobot.cpp  cryptobot.hpp
src/client/: CMakeLists.txt  OKX_Client.cpp  OKX_Client.hpp  binanceClient.cpp  binanceClient.hpp  cryptoClient.cpp  cryptoClient.hpp
src/client/archived/: binanceClient.cpp  binanceClient.hpp
src/init/: CMakeLists.txt  init.cpp  init.hpp
src/markets/: CMakeLists.txt  market.cpp  market.hpp  quote.cpp  quote.hpp
src/readers/: CMakeLists.txt  binance_reader.cpp  binance_reader.hpp  okx_read.cpp  okx_read.hpp  stream_reader.cpp  stream_reader.hpp
src/readers/archive/: stream_reader.cpp  stream_reader.hpp  trade_reader.cpp  trade_reader.hpp
src/readers/archive/binance_archive/: binance_reader.cpp  binance_reader.hpp  session.hpp  session_readers.cpp  session_readers.hpp  trade_reader.cpp  trade_reader.hpp
src/requests/: CMakeLists.txt  request_data.cpp  request_data.hpp  rollBack.cpp  rollBack.hpp
src/requests/archive/: binanceClient.cpp  binanceClient.hpp
src/tools/: CMakeLists.txt  config.cpp  config.hpp  log_file.cpp  log_file.hpp  logg.cpp  logg.hpp
src/utils/: blocking_queue.hpp  config_loader.hpp  logger.hpp  spinlock.hpp  tsmap.hpp
